syntax = "proto3";

package blogpb;

option go_package = "grpc-blog/blogpb";

message Post {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publication_date = 5;
  repeated string tags = 6;
}

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}

message ReadPostRequest {
  string post_id = 1;
}

message ReadPostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  Post post = 1;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {
  string message = 1;
}

service BlogService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

/*
PostID (unique identifier)
Title
Content
Author
Publication Date
Tags (multiple tags per post)
*/